
/*
* 本代码由cfgtool工具生成，请勿手动修改
*/

syntax = "proto3";

package poker;

option go_package = "./pb";

import "global_enum_cfg.proto";

message BreakInfo {
	int64 Interval = 1; // 间隔时长(等多久休息)
	int64 BreakTime = 2; // 每场休息时长
}

message CoinReward {
	CoinType CoinType = 1; // 货币类型
	int64 Incr = 2; // 数量
	int64 Total = 3; // 总数量
}

message TexasTestHandCard {
	string Hand1 = 1; // 玩家手牌
	string Hand2 = 2; // 玩家手牌
}

message MachineConfig {
	int32 ID = 1; // 唯一ID
	GameType GameType = 2; // 游戏类型
	int64 StartDuration = 3; // 开始时长(秒)
	int64 PreFlopDuration = 4; // 翻牌前时长
	int64 FlopDuration = 5; // 翻牌下注轮时长
	int64 TurnDuration = 6; // 转牌下注轮时长
	int64 RiverDuration = 7; // 河牌下注轮时长
	int64 EndDuration = 8; // 结算时长
	int64 DefaultDuration = 9; // 默认时长
}

message MachineConfigAry { repeated MachineConfig Ary = 1; }

message RouterConfig {
	uint32 Cmd = 1; // 消息唯一ID（一定是偶数）
	NodeType NodeType = 2; // 节点类型
	RouterType RouterType = 3; // 路由类型
	string Request = 4; // 请求协议名
	string Response = 5; // 应答协议名
	string ActorName = 6; // Actor名称
	string FuncName = 7; // 请求方法名称
}

message RouterConfigAry { repeated RouterConfig Ary = 1; }

message RummyConfig {
	uint32 ID = 1; // 唯一ID
	GameType GameType = 2; // 游戏类型
	RoomType RoomType = 3; // 房间类型
	CoinType CoinType = 4; // 货币类型
	int64 RoomKeepLive = 5; // 房间存在时长(分钟)
	int64 BaseScore = 6; // 底分
	int64 MinBuyIn = 7; // 最小入桌
	int64 RakeRate = 8; // 每局抽水万分比
	uint32 MinPlayerCount = 9; // 最低开始游戏玩家人数
	uint32 MaxPlayerCount = 10; // 最大玩家人数
	int64 FirstDrop = 11; // 没抽牌投降扣分
	int64 MiddleDrop = 12; // 中途投降扣分
	uint32 Decks = 13; // 游戏采用几幅牌
	uint32 Jokers = 14; // joker牌数
}

message RummyConfigAry { repeated RummyConfig Ary = 1; }

message RummyMachineConfig {
	GameType GameType = 1; // 游戏类型
	int64 ReadyDuration = 2; // 准备倒计时(秒)
	int64 StartDuration = 3; // 游戏开始时间
	int64 HostDuration = 4; // 定庄时间
	int64 DealDuration = 5; // 发牌
	int64 ShuffleDuration = 6; // 打牌过程洗牌动画时间
	int64 PlayDuration = 7; // 打牌时间
	int64 FixDuration = 8; // 最后调整牌时间
	int64 SettleDuration = 9; // 结算展示时间
}

message RummyMachineConfigAry { repeated RummyMachineConfig Ary = 1; }

message SngMatchConfig {
	int32 GameId = 1; // 唯一ID
	string Title = 2; // 赛事标题
	CoinType CoinType = 3; // 货币类型
	CoinReward Consume = 4; // 报名消耗货币类型
	int64 EntryFee = 5; // 报名服务费
	int64 Chip = 6; // 获得的筹码数量
	int32 PrizeType = 7; // 排名奖励类型 
	repeated BreakInfo BreakInfos = 8; // 间隔时间
}

message SngMatchConfigAry { repeated SngMatchConfig Ary = 1; }

message SngMatchRankRewardConfig {
	int32 PrizeType = 1; // 奖励类型
	int32 Level = 2; // 排名 
	repeated CoinReward Rewards = 3; // 奖励
}

message SngMatchRankRewardConfigAry { repeated SngMatchRankRewardConfig Ary = 1; }

message TexasConfig {
	int32 ID = 1; // 唯一ID
	GameType GameType = 2; // 游戏类型
	MatchType MatchType = 3; // 是否为赛事德州扑克
	RoomType RoomType = 4; // 房间类型
	CoinType CoinType = 5; // 货币类型
	int64 RoomKeepLive = 6; // 房间存在时长(分钟)
	int64 SmallBlind = 7; // 小盲注
	int64 BigBlind = 8; // 大盲注
	int32 MinBuyIn = 9; // 最小买入筹码
	int32 MaxBuyIn = 10; // 最大买入筹码
	int64 RakeRate = 11; // 每局抽水万分比
	int32 MinPlayerCount = 12; // 最低开始游戏玩家人数
	int32 MaxPlayerCount = 13; // 最大玩家人数 
	repeated int64 RakeUpLimit = 14; // 每局多少人的抽水上限，2人，3人等抽水
	uint32 MaxRoomPlayerCount = 15; // 最大房间人数
	bool IsNoFlopNoDrop = 16; // 是否开启
	bool IsTest = 17; // 是否为测试
}

message TexasConfigAry { repeated TexasConfig Ary = 1; }

message TexasTestConfig {
	uint32 Round = 1; // 第几轮牌局 
	repeated string Publics = 2; // 公共牌 
	repeated TexasTestHandCard Hands = 3; // 玩家手牌
}

message TexasTestConfigAry { repeated TexasTestConfig Ary = 1; }

